# FinLit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: quickstart.md
docs/superpowers/plans/: 2026-04-22-langchain-reader-integration.md  2026-04-26-mcp-server.md
docs/superpowers/specs/: 2026-04-10-vision-extraction-design.md  2026-04-22-langchain-llamaindex-readers-design.md  2026-04-26-mcp-server-design.md
examples/: custom_schema.py  extract_batch.py  extract_t4.py  extract_with_local_vision.py  extract_with_vision.py  langchain_rag.py  mcp_server_demo.py
finlit/: __init__.py  pipeline.py  result.py
finlit/cli/: main.py
finlit/extractors/: __init__.py  base.py  base_vision.py  pydantic_ai_extractor.py  vision_extractor.py
finlit/integrations/: __init__.py  _schema_resolver.py
finlit/integrations/langchain/: __init__.py  loader.py
finlit/integrations/mcp/: __init__.py  __main__.py  pipeline_cache.py  responses.py  server.py
finlit/parsers/: docling_parser.py  image_renderer.py
finlit/schemas/: __init__.py
finlit/schemas/banking/: bank_statement.yaml
finlit/schemas/cra/: nr4.yaml  t4.yaml  t4a.yaml  t5.yaml
finlit/validators/: field_validator.py
tests/: conftest.py  test_cli.py  test_image_renderer.py  test_parser.py  test_pipeline.py  test_public_api.py  test_result.py  test_validator.py  test_vision_extractor.py
tests/fixtures/: stub_extractor.py  test_stub_extractor.py
tests/integrations/: conftest.py  test_langchain_loader.py  test_schema_resolver.py
tests/integrations/mcp/: conftest.py  test_install_guard.py  test_launchers.py  test_pipeline_cache.py  test_responses.py  test_server_batch_extract.py  test_server_detect_pii.py  test_server_extract_document.py  test_server_list_schemas.py
