[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finlit"
version = "0.4.0"
description = "Canadian Financial Document Intelligence Framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["canada", "finance", "document", "extraction", "ai", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "docling>=2.0.0",
    "pydantic-ai>=0.0.14",
    "pydantic>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12.0",
    "anyio>=4.0.0",
    "pypdfium2>=4.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
langchain = ["langchain-core>=0.3.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
finlit = "finlit.cli.main:app"

[project.urls]
Homepage = "https://github.com/caseonix/FinLit"
Repository = "https://github.com/caseonix/FinLit"
Documentation = "https://github.com/caseonix/FinLit#readme"
Quickstart = "https://github.com/caseonix/FinLit/blob/main/docs/quickstart.md"
Issues = "https://github.com/caseonix/FinLit/issues"
Changelog = "https://github.com/caseonix/FinLit/blob/main/README.md#roadmap"

[tool.setuptools.packages.find]
where = ["."]
include = ["finlit*"]

[tool.setuptools.package-data]
"finlit.schemas" = ["**/*.yaml"]
